--- a/riddl/resources/worklist.html
+++ b/riddl/resources/worklist.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>WT Worklist</title>
-<link rel="stylesheet" href="smart-green.css" />
+<link rel="stylesheet" href="/resources/smart-green.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>
 var user = "";
