--- a/sinatra/bin/test/test.html
+++ b/sinatra/bin/test/test.html
@@ -11,6 +11,7 @@ $(document).ready(function(){
       url: url,
       type: type,
       data: data,
+      crossDomain: true,
       success: function(result){
         console.log(result);
         $("#result").html(result);
