new form-f made. works smoothly. Some minor details just missing (websocket)

--- a/riddl/ui/index.html
+++ b/riddl/ui/index.html
@@ -61,6 +61,7 @@
         <td class='sep'>⇒</td>
         <td class='ptake'><button class='pair_take' value=''>Take</button></td>
         <td class='pgiveback'><button class='pair_giveback' value='' >Give Back</button></td>
+        <td class='pdo'><button class='pair_do' value='' >Do it!</button></td>
       </tr>
     </table> <!--}}}-->
     <table id="prop_template_sizer" class='hidden'> <!--{{{-->
