--- a/riddl/resources/forms/form-f.html
+++ b/riddl/resources/forms/form-f.html
@@ -9,7 +9,7 @@
 </p>
 <p class="text">
   Laut unserem Techniker ist dieses Auto <span></span>.
-</p>';
+</p>
 
 <table>
   <tr>
@@ -18,7 +18,7 @@
       <input class ="rbt" type=radio name="ok" id="radionok" value="nok" /> Nicht OK
     </td>
     <td>
-      <input type='button' id="butt" value="absenden"/>
+      <button type='submit' id="butt">absenden</button>
     </td>
   </tr>
 </table>
