--- a/riddl/ui/index.html
+++ b/riddl/ui/index.html
@@ -111,9 +111,9 @@
     <div class="tabbed rest hidden" id='main'>
       <table class="tabbar">
         <tr>
-          <td class="tabbefore"                ></td>
-          <td class="tab"          id="tabtask"><h1>Tasks</h1></td>
-          <td class="tabbehind"                ></td>
+          <td class="tabbefore"               ></td>
+          <td class="tab default" id="tabtask"><h1>Tasks</h1></td>
+          <td class="tabbehind"               ></td>
         </tr>
         <tr class="border hidden"><td colspan="4"></td></tr>
       </table>
