Bug kinda fixed

--- a/riddl/tests/vote_test.html
+++ b/riddl/tests/vote_test.html
@@ -74,48 +74,6 @@
   </template>
   <div id="votes">
   
-    <div id="vote-div">
-      <div class="flex-container">
-        <div class="flex-item">
-            <span>Vote-ID: </span>
-            <span id="vote-id"> Hier wird sie stehen</span>
-        </div>
-        <div class="flex-item">
-          <input type="button" class="voter" onClick=voting(this) value="as"></input>
-        </div>
-        <div class="flex-item">
-          <input type="button" class="voter" onClick=voting(this) value="bs"></input>
-        </div>
-        <div class="flex-item">
-          <input type="button" class="voter" onClick=voting(this) value="cs"></input>
-        </div>
-        <div class="flex-item">
-          <input type="button" class="voter" onClick=voting(this) value="ds"></input>
-        </div>
-        <div class="flex-item">
-          <input type="button" class="voter" onClick=voting(this) value="es"></input>
-        </div>
-        <div class="flex-item">
-          <input type="button" class="voter" onClick=voting(this) value="fs"></input>
-        </div>
-        <div class="flex-item">
-          <input type="button" class="voter" onClick=voting(this) value="gs"></input>
-        </div>
-        <div class="flex-item">
-          <input type="button" class="voter" onClick=voting(this) value="hs"></input>
-        </div>
-        <div class="flex-item">
-          <input type="button" class="voter" onClick=voting(this) value="is"></input>
-        </div>
-        <div class="flex-item">
-          <input type="button" class="voter" onClick=voting(this) value="js"></input>
-        </div>
-        <div class="flex-item">
-          <input type="button" class="voter" onClick=voting(this) value="ks"></input>
-        </div>
-      </div>
-    </div>
-  
-  </div>
+    <div id="vote-div"></div>
 </body>
 </html>
